--- a/archs4/download.html
+++ b/archs4/download.html
@@ -218,29 +218,36 @@ This section contains all files created for the ARCHS4 website. The methods are 
         Expression files for mouse and human in HDF5 format. All gene counts are on gene level (Entrez Gene Symbol). For compression purposes the Kallisto pseudocounts are rounded to integer values.
     </div>
     <div style="float: left; width:270px;">
-        <a style="font-size:18;" href="javascript:downloadFile('https://mssm-seq-matrix.s3.amazonaws.com/human_matrix.h5','human_matrix.h5','8')">human_matrix.h5 v8</a><br>
-        <i>Date: 2/2020</i>
+        <a style="font-size:18;" href="javascript:downloadFile('https://mssm-seq-matrix.s3.amazonaws.com/human_matrix_v9.h5','human_matrix_v9.h5','9')">human_matrix_v9.h5</a><br>
+        <i>Date: 12/2020</i>
         <br>
-        <i>Size: 6.9 GB</i>
+        <i>Size: 11.4 GB</i>
         
+            <!--
         <hr>
-        <a style="font-size:18;" href="javascript:downloadFile('https://mssm-seq-matrix.s3.amazonaws.com/human_matrix.rda','human_matrix.rda','7')"><b>R</b> human_matrix.rda v8</a><br>
+        <a style="font-size:18;" href="javascript:downloadFile('https://mssm-seq-matrix.s3.amazonaws.com/human_matrix_v9.rda','human_matrix_v9.rda','7')"><b>R</b> human_matrix.rda v8</a><br>
         <i>Date: 2/2020</i>
         <br>
         <i>Size: 7.1 GB</i>
-    
+            -->
     </div>
+
+
     <div style="float: left; width:270px;">
-        <a style="font-size:18;" href="javascript:downloadFile('https://mssm-seq-matrix.s3.amazonaws.com/mouse_matrix.h5','mouse_matrix.h5','8')">mouse_matrix.h5 v8</a><br>
-        <i>Date: 2/2020</i>
+        <a style="font-size:18;" href="javascript:downloadFile('https://mssm-seq-matrix.s3.amazonaws.com/mouse_matrix.h5','mouse_matrix.h5','9')">mouse_matrix_v9.h5</a><br>
+        <i>Date: 12/2020</i>
         <br>
-        <i>Size: 6.6 GB</i>
+        <i>Size: 10.7 GB</i>
+
+            <!--
         <hr>
         <a style="font-size:18;" href="javascript:downloadFile('https://mssm-seq-matrix.s3.amazonaws.com/mouse_matrix.rda','mouse_matrix.rda','7')"><b>R</b> mouse_matrix.rda v8</a><br>
         <i>Date: 2/2020</i>
         <br>
         <i>Size: 4.8 GB</i>
+            -->
     </div>
+
 </div>
 <hr>
 
@@ -251,16 +258,16 @@ This section contains all files created for the ARCHS4 website. The methods are 
     Expression files for mouse and human in HDF5 format. All measurements are at the transcript level (Ensembl ID). For compression purposes the Kallisto pseudocounts are rounded to integer values.
     </div>
     <div style="float: left; width:270px;">
-        <a style="font-size:18;" href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/human_transcript_v8.h5','human_transcript.h5','8')">human_transcript_v8.h5</a><br>
-        <i>Date: 2/2020</i>
+        <a style="font-size:18;" href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/human_transcript_v9.h5','human_transcript_v9.h5','9')">human_transcript_v9.h5</a><br>
+        <i>Date: 12/2020</i>
         <br>
-        <i>Size: 23.6 GB</i>
+        <i>Size: 33.3 GB</i>
     </div>
      <div style="float: left; width:270px;">
-        <a style="font-size:18;" href="javascript:downloadFile('https://mssm-seq-matrix.s3.amazonaws.com/mouse_transcript_v8.h5','mouse_transcript.h5','8')">mouse_transcript_v8.h5</a><br>
-        <i>Date: 2/2020</i>
+        <a style="font-size:18;" href="javascript:downloadFile('https://mssm-seq-matrix.s3.amazonaws.com/mouse_transcript_v9.h5','mouse_transcript_v9.h5','9')">mouse_transcript_v9.h5</a><br>
+        <i>Date: 12/2020</i>
         <br>
-        <i>Size: 15.7 GB</i>
+        <i>Size: 21.9 GB</i>
     </div>
 </div>
 <hr>
@@ -272,16 +279,16 @@ This section contains all files created for the ARCHS4 website. The methods are 
     Expression files for mouse and human in HDF5 format. All measurements are at the transcript level (Ensembl ID). The files are very large and values are not rounded.
     </div>
     <div style="float: left; width:270px;">
-        <a style="font-size:18;" href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/human_tpm_v8.h5','human_transcript_tpm.h5','8')">human_tpm_v8.h5</a><br>
-        <i>Date: 2/2020</i>
+        <a style="font-size:18;" href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/human_tpm_v9.h5','human_tpm_v9.h5','9')">human_tpm_v9.h5</a><br>
+        <i>Date: 12/2020</i>
         <br>
-        <i>Size: 91.3 GB</i>
+        <i>Size: 71.2 GB</i>
     </div>
      <div style="float: left; width:270px;">
-        <a style="font-size:18;" href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/mouse_tpm_v8.h5','mouse_transcript_tpm.h5','8')">mouse_tpm_v8.h5</a><br>
-        <i>Date: 2/2020</i>
+        <a style="font-size:18;" href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/mouse_tpm_v9.h5','mouse_tpm_v9.h5','9')">mouse_tpm_v9.h5</a><br>
+        <i>Date: 12/2020</i>
         <br>
-        <i>Size: 56.1 GB</i>
+        <i>Size: 44.7 GB</i>
     </div>
 </div>
 <hr>
@@ -349,6 +356,7 @@ This section contains all files created for the ARCHS4 website. The methods are 
 </div>
 <hr>
 
+<!--
 <div style="float: left; width:340px;"><h3>GSM meta information</h3></div>  <div style="float: left; width:270px;"><h3>Human</h3></div>  <div style="float: left; width:270px;"><h3>Mouse</h3></div>
 
 <div style="width:900px; height:170px; padding-left:30px;">
@@ -369,7 +377,7 @@ This section contains all files created for the ARCHS4 website. The methods are 
     </div>
 </div>
 <hr>
-
+-->
 
 
 <div style="float: left; width:340px;"><h3>Gene correlation</h3></div>  <div style="float: left; width:270px;"><h3>Human</h3></div>  <div style="float: left; width:270px;"><h3>Mouse</h3></div>
