--- a/archs4/download.html
+++ b/archs4/download.html
@@ -234,7 +234,7 @@ This section contains all files created for the ARCHS4 website. The methods are 
 
 
     <div style="float: left; width:270px;">
-        <a style="font-size:18;" href="javascript:downloadFile('https://mssm-seq-matrix.s3.amazonaws.com/mouse_matrix.h5','mouse_matrix.h5','9')">mouse_matrix_v9.h5</a><br>
+        <a style="font-size:18;" href="javascript:downloadFile('https://mssm-seq-matrix.s3.amazonaws.com/mouse_matrix_v9.h5','mouse_matrix.h5','9')">mouse_matrix_v9.h5</a><br>
         <i>Date: 12/2020</i>
         <br>
         <i>Size: 10.7 GB</i>
