--- a/archs4/help.html
+++ b/archs4/help.html
@@ -230,7 +230,6 @@
         <h3><a href="javascript:scrollPage('datahandling')" style="color:black;">Data handling</a></h3>
         <ul style="padding-left: 30px; list-style: none;">
            <li class="fl"><a href="javascript:scrollPage('abouth5')">About the H5 file format</a></li>
-           <li class="fl"><a href="javascript:scrollPage('generatedscript')">Using auto-generated download script</a></li>
            <li class="fl"><a href="javascript:scrollPage('parsingh5')">Parsing the H5 file</a></li>
            <li class="fl"><a href="javascript:scrollPage('batcheffect')">Batch effect removal</a></li>
         </ul>
@@ -422,60 +421,6 @@ Hierarchical Data Format (HDF) is an open source file format for large data stor
 </p>
 <br>
 
-<h4 id="generatedscript">Using the auto-generated download script</h4>
-<p>
-Scripts to extract tab separated gene expression files can be created through the graphical user interface of ARCHS<sup>4</sup>. The script has to be executed as a R-script. A free version of R can be downloaded at <a href="https://www.rstudio.com/products/rstudio/download2/">www.rstudio.com</a>. Upon execution the script should install all required dependencies and download the full gene expression file. 
-</p>
-<pre class="prettyprint" style="padding:10px;">
-<code>
-# R script to download selected samples
-# Copy code and run on a local machine to initiate download
-# Check for dependencies and install if missing
-packages <- c("rhdf5")
-if (length(setdiff(packages, rownames(installed.packages()))) > 0) {
-    print("Install required packages")
-    source("https://bioconductor.org/biocLite.R")
-    biocLite("rhdf5")
-}
-library("rhdf5")
-
-destination_file = "human_matrix.h5"
-extracted_expression_file = "example_expression_matrix.tsv"
-
-# Check if gene expression file was already downloaded, if not in current directory download file form repository
-if(!file.exists(destination_file)){
-    print("Downloading compressed gene expression matrix.")
-    url = "https://s3.amazonaws.com/mssm-seq-matrix/human_matrix.h5"
-    download.file(url, destination_file, quiet = FALSE)
-} else{
-    print("Local file already exists.")
-}
-
-# Selected samples to be extracted
-samp = c("GSM1224927","GSM1066120","GSM1224923","GSM1224929","GSM1224924","GSM1066118","GSM1066119","GSM1224925","GSM1224930","GSM1872071","GSM2282084","GSM1872064","GSM1872067","GSM1704845")
-
-# Retrieve information from compressed data
-samples = h5read(destination_file, "meta/Sample_geo_accession")
-# Identify columns to be extracted
-sample_locations = which(samples %in% samp)
-
-tissue = h5read(destination_file, "meta/Sample_source_name_ch1")
-genes = h5read(destination_file, "meta/genes")
-series = h5read(destination_file, "meta/Sample_series_id")
-
-# extract gene expression from compressed data
-expression = h5read(destination_file, "data/expression", index=list(1:length(genes), sample_locations))
-H5close()
-rownames(expression) = genes
-colnames(expression) = samples[sample_locations]
-
-# Print file
-write.table(expression, file=extracted_expression_file, sep="\t", quote=FALSE)
-print(paste0("Expression file was created at ", getwd(), "/", extracted_expression_file))
-</code>
-</pre>
-<br>
-
 <h4 id="parsingh5">Parsing H5 file</h4>
 
 <p>
@@ -486,51 +431,39 @@ Scripts to extract tab separated gene expression files can be created through th
 # R script to download selected samples
 # Copy code and run on a local machine to initiate download
 # Check for dependencies and install if missing
-packages <- c("rhdf5", "preprocessCore")
-if (length(setdiff(packages, rownames(installed.packages()))) > 0) {
-    print("Install required packages")
-    source("https://bioconductor.org/biocLite.R")
-    biocLite("rhdf5")
-    biocLite("preprocessCore")
-}
-library("rhdf5")
-library("preprocessCore")
+library("rhdf5")    # can be installed using Bioconductor
 
-destination_file = "human_matrix.h5"
-extracted_expression_file = "example_expression_matrix.tsv"
+destination_file = "human_matrix_v9.h5"
+extracted_expression_file = "GSM2679484_expression_matrix.tsv"
+url = "https://s3.amazonaws.com/mssm-seq-matrix/human_matrix_v9.h5"
 
 # Check if gene expression file was already downloaded, if not in current directory download file form repository
 if(!file.exists(destination_file)){
     print("Downloading compressed gene expression matrix.")
-    url = "https://s3.amazonaws.com/mssm-seq-matrix/human_matrix.h5"
-    download.file(url, destination_file, quiet = FALSE)
-} else{
-    print("Local file already exists.")
+    download.file(url, destination_file, quiet = FALSE, mode = 'wb')
 }
 
 # Selected samples to be extracted
-samp = c("GSM1224927","GSM1066120","GSM1224923","GSM1224929","GSM1224924","GSM1066118","GSM1066119","GSM1224925","GSM1224930","GSM1872071","GSM2282084","GSM1872064","GSM1872067","GSM1704845")
+samp = c("GSM2679452","GSM2679453","GSM2679454","GSM2679455","GSM2679456","GSM2679457","GSM2679458","GSM2679459","GSM2679460","GSM2679461","GSM2679462","GSM2679463","GSM2679464","GSM2679465","GSM2679466","GSM2679467","GSM2679468","GSM2679469","GSM2679470","GSM2679471","GSM2679472","GSM2679473","GSM2679474","GSM2679475","GSM2679476","GSM2679477","GSM2679478","GSM2679479","GSM2679480","GSM2679481","GSM2679482",
+"GSM2679483","GSM2679484","GSM2679485","GSM2679486","GSM2679487","GSM2679488","GSM2679489","GSM2679490","GSM2679491","GSM2679492","GSM2679493","GSM2679494","GSM2679495","GSM2679496","GSM2679497","GSM2679498","GSM2679499","GSM2679500","GSM2679501","GSM2679502","GSM2679503","GSM2679504","GSM2679505","GSM2679506","GSM2679507","GSM2679508","GSM2679509","GSM2679510","GSM2679511","")
 
 # Retrieve information from compressed data
-samples = h5read(destination_file, "meta/Sample_geo_accession")
+samples = h5read(destination_file, "meta/samples/geo_accession")
+genes = h5read(destination_file, "meta/genes/genes")
 
 # Identify columns to be extracted
 sample_locations = which(samples %in% samp)
 
-tissue = h5read(destination_file, "meta/Sample_source_name_ch1")
-genes = h5read(destination_file, "meta/genes")
-series = h5read(destination_file, "meta/Sample_series_id")
-
 # extract gene expression from compressed data
-expression = h5read(destination_file, "data/expression", index=list(1:length(genes), sample_locations))
+expression = t(h5read(destination_file, "data/expression", index=list(sample_locations, 1:length(genes))))
 H5close()
-
-# normalize samples and correct for differences in gene count distribution
-expression = log2(expression+1)
-expression = normalize.quantiles(expression)
-
 rownames(expression) = genes
 colnames(expression) = samples[sample_locations]
+
+# Print file
+write.table(expression, file=extracted_expression_file, sep="\t", quote=FALSE, col.names=NA)
+print(paste0("Expression file was created at ", getwd(), "/", extracted_expression_file))
+
 </code>
 </pre>
 <br>
