--- a/archs4/help.html
+++ b/archs4/help.html
@@ -481,46 +481,34 @@ Extracted samples from a specified tissue can originate from multiple series wit
 # R script to download selected samples
 # Copy code and run on a local machine to initiate download
 # Check for dependencies and install if missing
-packages <- c("rhdf5", "preprocessCore", "sva")
-if (length(setdiff(packages, rownames(installed.packages()))) > 0) {
-    print("Install required packages")
-    source("https://bioconductor.org/biocLite.R")
-    biocLite("rhdf5")
-    biocLite("preprocessCore")
-    biocLite("sva")
-}
-library("rhdf5")
-library("preprocessCore")
-library("sva")
+library("rhdf5")    # can be installed using Bioconductor
 
-destination_file = "human_matrix.h5"
-extracted_expression_file = "example_expression_matrix.tsv"
+destination_file = "human_matrix_v9.h5"
+extracted_expression_file = "GSM2679484_expression_matrix.tsv"
+url = "https://s3.amazonaws.com/mssm-seq-matrix/human_matrix_v9.h5"
 
 # Check if gene expression file was already downloaded, if not in current directory download file form repository
 if(!file.exists(destination_file)){
     print("Downloading compressed gene expression matrix.")
-    url = "https://s3.amazonaws.com/mssm-seq-matrix/human_matrix.h5"
-    download.file(url, destination_file, quiet = FALSE)
-} else{
-    print("Local file already exists.")
+    download.file(url, destination_file, quiet = FALSE, mode = 'wb')
 }
 
 # Selected samples to be extracted
-samp = c("GSM1224927","GSM1066120","GSM1224923","GSM1224929","GSM1224924","GSM1066118","GSM1066119","GSM1224925","GSM1224930","GSM1872071","GSM2282084","GSM1872064","GSM1872067","GSM1704845")
+samp = c("GSM2679452","GSM2679453","GSM2679454","GSM2679455","GSM2679456","GSM2679457","GSM2679458","GSM2679459","GSM2679460","GSM2679461","GSM2679462","GSM2679463","GSM2679464","GSM2679465","GSM2679466","GSM2679467","GSM2679468","GSM2679469","GSM2679470","GSM2679471","GSM2679472","GSM2679473","GSM2679474","GSM2679475","GSM2679476","GSM2679477","GSM2679478","GSM2679479","GSM2679480","GSM2679481","GSM2679482",
+"GSM2679483","GSM2679484","GSM2679485","GSM2679486","GSM2679487","GSM2679488","GSM2679489","GSM2679490","GSM2679491","GSM2679492","GSM2679493","GSM2679494","GSM2679495","GSM2679496","GSM2679497","GSM2679498","GSM2679499","GSM2679500","GSM2679501","GSM2679502","GSM2679503","GSM2679504","GSM2679505","GSM2679506","GSM2679507","GSM2679508","GSM2679509","GSM2679510","GSM2679511","")
 
 # Retrieve information from compressed data
-samples = h5read(destination_file, "meta/Sample_geo_accession")
+samples = h5read(destination_file, "meta/samples/geo_accession")
+genes = h5read(destination_file, "meta/genes/genes")
+
 # Identify columns to be extracted
 sample_locations = which(samples %in% samp)
 
-tissue = h5read(destination_file, "meta/Sample_source_name_ch1")
-genes = h5read(destination_file, "meta/genes")
-series = h5read(destination_file, "meta/Sample_series_id")
-series = series[sample_locations]
-
 # extract gene expression from compressed data
-expression = h5read(destination_file, "data/expression", index=list(1:length(genes), sample_locations))
+expression = t(h5read(destination_file, "data/expression", index=list(sample_locations, 1:length(genes))))
 H5close()
+rownames(expression) = genes
+colnames(expression) = samples[sample_locations]
 
 # normalize samples and correct for differences in gene count distribution
 expression = log2(expression+1)
