--- a/archs4/update/download_template.html
+++ b/archs4/update/download_template.html
@@ -271,7 +271,7 @@ This section contains all files created for the ARCHS4 website. The methods are 
         <a style="font-size:18;" href="javascript:downloadFile('mouse_tpm_url','mouse_tpm_name','current_version')">mouse_tpm_name</a><br>
         <i>Date: update_date</i>
         <br>
-        <i>Size: mouse_tpm_size</i>
+        <i>Size: mouse_tpm_file_size</i>
     </div>
 </div>
 <hr>
