--- a/archs4/download.html
+++ b/archs4/download.html
@@ -271,7 +271,7 @@ This section contains all files created for the ARCHS4 website. The methods are 
         <a style="font-size:18;" href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/mouse_tpm_v10.h5','mouse_tpm_v10.h5','10')">mouse_tpm_v10.h5</a><br>
         <i>Date: 02-25-2021</i>
         <br>
-        <i>Size: mouse_tpm_size</i>
+        <i>Size: 51G</i>
     </div>
 </div>
 <hr>
