--- a/archs4/download.html
+++ b/archs4/download.html
@@ -403,6 +403,21 @@ This section contains all files created for the ARCHS4 website. The methods are 
 <hr>
 
 
+<div style="float: left; width:940px;"><h3>PrismExp predictions</h3></div>
+
+<div style="width:900px; height:150px; padding-left:30px; padding-top: 20px;">
+    <div style="float: left; width:310px; padding-right: 60px;">
+        Gene function prediction from PrismEXP using 300 correlation matrices in <a href="https://arrow.apache.org/docs/python/feather.html">feather</a> and can be loaded directly into memory in Python and R. Contains 155 files zipped.
+    </div>
+    <div style="float: left; width:270px;">
+        <a style="font-size:18;" href="javascript:downloadFile('https://s3.amazonaws.com/mssm-prismexp-predictions/prismx_predictions.zip','prismx_prediction.zip','1')">prismx_prediction.zip v1.0</a><br>
+        <i>Date: 4/2021</i>
+        <br>
+        <i>Size: 4.44 GB</i>
+    </div>
+</div>
+<hr>
+
 <div style="float: left; width:340px;"><h3>JL transfomed expression</h3></div>  <div style="float: left; width:270px;"><h3>Human</h3></div>  <div style="float: left; width:270px;"><h3>Mouse</h3></div>
 
 <div style="width:900px; height:280px; padding-left:30px;">
