fix signature search

--- a/archs4/help.html
+++ b/archs4/help.html
@@ -1008,7 +1008,7 @@ correctedExpression <- ComBat(dat=expression, batch=batchid, par.prior=TRUE, pri
             </tr>
             <tr>
               <td><strong>URL</strong></td>
-              <td class="url">https://amp.pharm.mssm.edu/custom/rooky</td>
+              <td class="url">https://maayanlab.cloud/custom/rooky</td>
             </tr>
             <tr>
               <td valign="top"><strong>Returns</strong></td>
@@ -1070,7 +1070,7 @@ correctedExpression <- ComBat(dat=expression, batch=batchid, par.prior=TRUE, pri
                 <pre><code class="python hljs"><b>import</b> json
 <b>import</b> requests
 
-URL = 'https://amp.pharm.mssm.edu/custom/rooky'
+URL = 'https://maayanlab.cloud/custom/rooky'
 
 data = {
     "type": "full_signature",
