--- a/archs4/download.html
+++ b/archs4/download.html
@@ -258,7 +258,6 @@
                 <h3>Mouse</h3>
             </div>
 
-
             <div style="width:900px; height:180px; padding-left:30px;">
                 <div style="float: left; width:310px; padding-right: 60px;">
                     Expression files for mouse and human in HDF5 format. All gene counts are on gene level (Entrez Gene
@@ -657,7 +656,7 @@
                 <div style="width:900px; height:210px; padding-left:30px;">
                     <div style="float: left; width:310px; padding-right: 60px;">
                         Kallisto index files used for the alignment process. The index files where build using the
-                        Ensembl annotation version 90 and reference cDNA Homo_sapiens.GRCh38.cdna.all.fa.gz and
+                        Ensembl annotation version 87 for human and 88 for mouse and reference cDNA Homo_sapiens.GRCh38.cdna.all.fa.gz and
                         Mus_musculus.GRCm38.cdna.all.fa.gz.
                     </div>
                     <div style="float: left; width:270px;">
