--- a/archs4/archs4zoo.html
+++ b/archs4/archs4zoo.html
@@ -686,13 +686,13 @@
         </div>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-JME9W29621"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-KWK5EC1P91"></script>
         <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-JME9W29621');
+        gtag('config', 'G-KWK5EC1P91');
         </script>
 
 
