--- a/archs4/download.html
+++ b/archs4/download.html
@@ -128,19 +128,16 @@
         }
 
         function downloadFile(_url, file, version) {
-
-            $.getJSON('https://api.db-ip.com/v2/free/self/', function (data) {
-                $.ajax({
-                    type: "GET",
-                    url: "search/downloadtracker.php?ip=" + data["ipAddress"] + "&file=" + file + "&version=" + version,
-                    success: function () {
-                        window.location = _url;
-                    },
-                    error: function (XMLHttpRequest, textStatus, errorThrown) {
-                        console.log(textStatus, errorThrown);
-                        window.location = _url;
-                    }
-                });
+            $.ajax({
+                type: "GET",
+                url: "search/downloadtracker.php?ip=" + "0.0.0.0" + "&file=" + file + "&version=" + version,
+                success: function () {
+                    window.location = _url;
+                },
+                error: function (XMLHttpRequest, textStatus, errorThrown) {
+                    console.log(textStatus, errorThrown);
+                    window.location = _url;
+                }
             });
         }
 
@@ -148,8 +145,6 @@
 </head>
 
 <body>
-
-
     <div id="nav"
         style="margin-bottom: 5px; background-color: #F8F8F8; border-bottom: 1px solid #E7E7E7; height: 60px;">
         <nav class="navbar navbar-default navbar-toggleable-md navbar-inverse container" role="navigation"
@@ -248,6 +243,48 @@
         <a href="javascript:scrollPage('github_rep')">GitHub repository</a>
         <hr>
         <div>
+            <div style="width: 930px; height:320px; padding:10px 20px 20px 20px; margin-left:-10px; background-color: #cdffed; border-radius: 12px;" id="animation-target">
+                <div>
+                    <h2>ARCHS4 Version 2 (Ensembl 107) <b>Beta</b></h2>
+                    This is the newest data-release of the ARCHS4 gene expression collection. The Ensembl Annotation version is now 107 increasing the number of genes significantly for coding and non coding genes.
+                    A redesigned pipeline was used to create the files. Some features are still missing and will be added at a later time point. The old data will also still be available.
+                </div>
+
+                <div id="exp_gene" style="float: left; width:340px;">
+                    <h3>Expression (gene level)</h3>
+                </div>
+                <div style="float: left; width:270px;">
+                    <h3>Human</h3>
+                </div>
+                <div style="float: left; width:270px;">
+                    <h3>Mouse</h3>
+                </div>
+
+                <div style="float: left; width:310px; padding-right: 60px; padding-left: 20px;">
+                    Expression files for mouse and human in HDF5 format. All gene counts are on gene level (Entrez Gene
+                    Symbol). For compression purposes the Kallisto pseudocounts are rounded to integer values.
+                </div>
+                <div style="float: left; width:270px;">
+                    <a style="font-size:18;"
+                        href="javascript:downloadFile('https://s3.dev.maayanlab.cloud/archs4/archs4_gene_human_v2.1.2.h5','human_matrix_v2.1.2.h5','2.1.2')">human_matrix_v2.1.2.h5</a><br>
+                    <i>Date: 10-19-2022</i>
+                    <br>
+                    <i>Size: 28G</i>
+                    <br>
+                    <i style="font-size: 9px;">SHA1: 742ba9fba9b6e5bc4577a555243dc208dafc0423</i>
+                </div>
+
+                <div style="float: left; width:270px;">
+                    <a style="font-size:18;"
+                        href="javascript:downloadFile('https://s3.dev.maayanlab.cloud/archs4/archs4_gene_mouse_v2.1.2.h5','mouse_matrix_v2.1.2.h5','2.1.2')">mouse_matrix_v2.1.2.h5</a><br>
+                    <i>Date: 10-19-2022</i>
+                    <br>
+                    <i>Size: 25G</i>
+                    <br>
+                    <i style="font-size: 9px;">SHA1: ded9d42ce96bf23fd7a107e6cfe839b622df7919</i>
+                </div>
+            </div>
+
             <div id="exp_gene" style="float: left; width:340px;">
                 <h3>Expression (gene level)</h3>
             </div>
@@ -258,14 +295,16 @@
                 <h3>Mouse</h3>
             </div>
 
-            <div style="width:900px; height:180px; padding-left:30px;">
+            <hr>
+
+            <div style="width:900px; height:160px; padding-left:30px;">
                 <div style="float: left; width:310px; padding-right: 60px;">
                     Expression files for mouse and human in HDF5 format. All gene counts are on gene level (Entrez Gene
                     Symbol). For compression purposes the Kallisto pseudocounts are rounded to integer values.
                 </div>
                 <div style="float: left; width:270px;">
                     <a style="font-size:18;"
-                        href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/human_matrix_v11.h5','human_matrix_v11.h5','11')">human_matrix_v11.h5</a><br>
+                        href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/human_matrix_v11.h5','human_matrix_v1.11.h5','11')">human_matrix_v1.11.h5</a><br>
                     <i>Date: 11-16-2021</i>
                     <br>
                     <i>Size: 17G</i>
@@ -273,12 +312,11 @@
 
                 <div style="float: left; width:270px;">
                     <a style="font-size:18;"
-                        href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/mouse_matrix_v11.h5','mouse_matrix_v11.h5','11')">mouse_matrix_v11.h5</a><br>
+                        href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/mouse_matrix_v11.h5','mouse_matrix_v1.11.h5','11')">mouse_matrix_v1.11.h5</a><br>
                     <i>Date: 11-16-2021</i>
                     <br>
                     <i>Size: 17G</i>
                 </div>
-
             </div>
             <hr>
 
@@ -299,14 +337,14 @@
                 </div>
                 <div style="float: left; width:270px;">
                     <a style="font-size:18;"
-                        href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/human_transcript_v11.h5','human_transcript_v11.h5','11')">human_transcript_v11.h5</a><br>
+                        href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/human_transcript_v11.h5','human_transcript_v1.11.h5','11')">human_transcript_v1.11.h5</a><br>
                     <i>Date: 11-16-2021</i>
                     <br>
                     <i>Size: 48G</i>
                 </div>
                 <div style="float: left; width:270px;">
                     <a style="font-size:18;"
-                        href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/mouse_transcript_v11.h5','mouse_transcript_v11.h5','11')">mouse_transcript_v11.h5</a><br>
+                        href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/mouse_transcript_v11.h5','mouse_transcript_v1.11.h5','11')">mouse_transcript_v1.11.h5</a><br>
                     <i>Date: 11-16-2021</i>
                     <br>
                     <i>Size: 33G</i>
@@ -331,14 +369,14 @@
                 </div>
                 <div style="float: left; width:270px;">
                     <a style="font-size:18;"
-                        href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/human_tpm_v11.h5','human_tpm_v11.h5','11')">human_tpm_v11.h5</a><br>
+                        href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/human_tpm_v11.h5','human_tpm_v11.h5','11')">human_tpm_v1.11.h5</a><br>
                     <i>Date: 11-16-2021</i>
                     <br>
                     <i>Size: 101G</i>
                 </div>
                 <div style="float: left; width:270px;">
                     <a style="font-size:18;"
-                        href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/mouse_tpm_v11.h5','mouse_tpm_v11.h5','11')">mouse_tpm_v11.h5</a><br>
+                        href="javascript:downloadFile('https://s3.amazonaws.com/mssm-seq-matrix/mouse_tpm_v11.h5','mouse_tpm_v11.h5','11')">mouse_tpm_v1.11.h5</a><br>
                     <i>Date: 11-16-2021</i>
                     <br>
                     <i>Size: 64G</i>
