--- a/archs4/help.html
+++ b/archs4/help.html
@@ -1242,7 +1242,7 @@ r.json()
           <li class="fl"><a href="https://www.lincs-dcic.org/" target="_blank">BD2K-LINCS Data Coordination and
               Integration Center (DCIC)</a></li>
           <li class="fl"><a href="https://www.lincsproject.org/">NIH LINCS program</a></li>
-          <li class="fl"><a href="https://bd2k.nih.gov/" target="_blank">NIH Big Data to Knowledge (BD2K)</a></li>
+          <li class="fl"><a href="https://itcr.cancer.gov/" target="_blank">Informatics Technology for Cancer Research (ITCR)</a></li>
           <li class="fl"><a href="https://commonfund.nih.gov/idg/index" target="_blank">NIH Illuminating the Druggable
               Genome (IDG) Program</a></li>
           <li class="fl"><a href="https://icahn.mssm.edu/" target="_blank">Icahn School of Medicine at Mount Sinai</a>
