--- a/archs4/update/test.html
+++ b/archs4/update/test.html
@@ -509,13 +509,13 @@ This section contains all files created for the ARCHS4 website. The methods are 
             <li class="fl"><a href="http://icahn.mssm.edu/research/labs/maayan-laboratory" target="_blank">The Ma'ayan Lab</a></li>
             <li class="fl"><a href="http://www.lincs-dcic.org/" target="_blank">BD2K-LINCS Data Coordination and Integration Center (DCIC)</a></li>
             <li class="fl"><a href="http://www.lincsproject.org/">NIH LINCS program</a></li>
-            <li class="fl"><a href="http://bd2k.nih.gov/" target="_blank">NIH Big Data to Knowledge (BD2K)</a></li>
+            <li class="fl"><a href="https://itcr.cancer.gov/" target="_blank">Informatics Technology for Cancer Research (ITCR)</a></li>
             <li class="fl"><a href="https://commonfund.nih.gov/idg/index" target="_blank">NIH Illuminating the Druggable Genome (IDG) Program</a></li>
             <li class="fl"><a href="http://icahn.mssm.edu/" target="_blank">Icahn School of Medicine at Mount Sinai</a></li>
         </ul>
     </div>
     <div style="float: right; color: grey;">
-        <img src="images/dcic.png" height=100><br>
+        <img src="images/logo_ml.png" height=80><br>
         © Ma'ayan Lab.
     </div>
 </div>
