--- a/archs4/archs4zoo.html
+++ b/archs4/archs4zoo.html
@@ -128,19 +128,19 @@
 
         function downloadFile(_url, file, version) {
 
-            $.getJSON('https://api.db-ip.com/v2/free/self/', function (data) {
-                $.ajax({
-                    type: "GET",
-                    url: "search/downloadtracker.php?ip=" + data["ipAddress"] + "&file=" + file + "&version=" + version,
-                    success: function () {
-                        window.location = _url;
-                    },
-                    error: function (XMLHttpRequest, textStatus, errorThrown) {
-                        console.log(textStatus, errorThrown);
-                        window.location = _url;
-                    }
-                });
+            
+            $.ajax({
+                type: "GET",
+                url: "search/downloadtracker.php?ip=" + "0.0.0.0" + "&file=" + file + "&version=" + 1,
+                success: function () {
+                    window.location = _url;
+                },
+                error: function (XMLHttpRequest, textStatus, errorThrown) {
+                    console.log(textStatus, errorThrown);
+                    window.location = _url;
+                }
             });
+            
         }
     </script>
 </head>
@@ -671,8 +671,7 @@
                     <li class="fl"><a href="http://www.lincs-dcic.org/" target="_blank">BD2K-LINCS Data Coordination and
                             Integration Center (DCIC)</a></li>
                     <li class="fl"><a href="http://www.lincsproject.org/">NIH LINCS program</a></li>
-                    <li class="fl"><a href="http://bd2k.nih.gov/" target="_blank">NIH Big Data to Knowledge (BD2K)</a>
-                    </li>
+                    <li class="fl"><a href="https://itcr.cancer.gov/" target="_blank">Informatics Technology for Cancer Research (ITCR)</a></li>
                     <li class="fl"><a href="https://commonfund.nih.gov/idg/index" target="_blank">NIH Illuminating the
                             Druggable Genome (IDG) Program</a></li>
                     <li class="fl"><a href="http://icahn.mssm.edu/" target="_blank">Icahn School of Medicine at Mount
@@ -680,7 +679,7 @@
                 </ul>
             </div>
             <div style="float: right; color: grey;">
-                <img src="images/dcic.png" height=100><br>
+                <img src="images/logo_ml.png" height=80><br>
                 © Ma'ayan Lab.
             </div>
         </div>
