--- a/archs4/data.html
+++ b/archs4/data.html
@@ -331,13 +331,13 @@
                     <li class="fl"><a href="https://icahn.mssm.edu/research/labs/maayan-laboratory" target="_blank">The Ma'ayan Lab</a></li>
                     <li class="fl"><a href="https://www.lincs-dcic.org/" target="_blank">BD2K-LINCS Data Coordination and Integration Center (DCIC)</a></li>
                     <li class="fl"><a href="https://www.lincsproject.org/">NIH LINCS program</a></li>
-                    <li class="fl"><a href="https://bd2k.nih.gov/" target="_blank">NIH Big Data to Knowledge (BD2K)</a></li>
+                    <li class="fl"><a href="https://itcr.cancer.gov/" target="_blank">Informatics Technology for Cancer Research (ITCR)</a></li>
                     <li class="fl"><a href="https://commonfund.nih.gov/idg/index" target="_blank">NIH Illuminating the Druggable Genome (IDG) Program</a></li>
                     <li class="fl"><a href="https://icahn.mssm.edu/" target="_blank">Icahn School of Medicine at Mount Sinai</a></li>
                 </ul>
             </div>
             <div class="col-sm-3">
-                <img src="images/dcic.png" height=100><br>
+                <img src="images/logo_ml.png" height=80><br>
                 © Ma'ayan Lab.
             </div>
         </div>
